<resources>
    <string name="app_name">PilotZai</string>
    <string name="start_phone_auth">Start</string>

    <string name="verify_phone_auth">Verify</string>

    <string name="resend_phone_auth">Resend</string>

    <string name="hint_phone_number">Phone Number</string>

    <string name="hint_verification_code">Verification Code</string>

    <string name="status_code_sent">Code Sent</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="about_us">About</string>

    <string name="status_verification_failed">Verification failed</string>

    <string name="status_verification_succeeded">Verification succeeded</string>

    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="sign_out">Sign Out</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="instant_validation">(instant validation)</string>

    <string name="signed_in">Signed In</string>

    <string name="signed_out">Signed Out</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>

    <string name="loading">Loading…</string>

    <string name="faree">Your Fare :</string>

    <string name="pname">Pilot Name :</string>

    <string name="bikenumber">Bike Number :</string>

    <string name="track">Track My Ride !</string>

    <string name="cardview_contents">CardView widget

        \n\ncard with a shadow <font fgcolor="#FFFFFFFF">android:elevation</font>

        attribute.

        \n\ncard with corner radius  <font

            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <!-- <string name="cardview_contents">This is a CardView widget. CardView widgets can have-->

    <!--shadows and rounded corners.-->

    <!--\n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>-->

    <!--attribute.-->

    <!--\n\nTo set the corner radius in your layouts, use the <font-->

    <!--fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.-->

    <!--</string>-->

    <string name="cardview_radius_seekbar_text">Radius</string>

    <string name="cardview_elevation_seekbar_text">Elevation</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="login_hint">Phone Number</string>
    <string name="go">Let\'s Go!</string>
    <string name="otp">Enter OTP</string>
    <string name="req">Request</string>
    <string name="otp_text">Your OTP :    </string>
    <string name="rideDetails">Ride Details</string>
    <string name="title_activity_before_request_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ride">Ride Details</string>
    <string name="desc1">Successful login</string>
    <string name="desc2">ride is on img</string>
    <string name="desc3">App logo img</string>
    <string name="done">Done</string>


</resources>

