<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/main_layout"
              android:background="@color/appbackground"
              android:screenOrientation="portrait">

    <RelativeLayout
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <!--logo-->
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="70dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/signin_logo"
            android:contentDescription="@string/desc3"
            />

    </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp">


         <LinearLayout
        android:id="@+id/signin_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/field_phone_number"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/login_hint"
            android:gravity="center"
            android:textColorHint="@color/for_helvicaR"
            android:layout_marginBottom="40dp"
            android:inputType="phone"
            android:fontFamily="helvicaRegular"
            app:backgroundTint="@color/for_helvicaR"/>

        <Button
            android:id="@+id/button_start_verification"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="helvicaRegular"
            android:background="@drawable/button_border"
            android:layout_marginTop="40dp" />

    </LinearLayout>
        </RelativeLayout>


    <LinearLayout
        android:id="@+id/signin_verify_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/verify_detail"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_marginBottom="20dp"
            android:textColor="@color/for_helvicaR"
            android:fontFamily="helvicaRegular"
            />

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/otp"
            android:gravity="center"
            android:fontFamily="helveticaRegular"
            android:textColorHint="@color/for_helvicaR"
            android:layout_marginBottom="40dp"
            android:inputType="number"
            app:backgroundTint="@color/for_helvicaR"/>

        <Button
            android:id="@+id/button_verify_phone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/verify_phone_auth"
            android:textAllCaps="false"
            android:fontFamily="helveticaRegular"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:layout_marginTop="40dp" />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/signin_resend_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"

        android:visibility="gone">

        <Button
            android:id="@+id/button_resend"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/resend_phone_auth"
            android:textColor="@color/black"
            android:fontFamily="helveticaRegular"
            android:textAllCaps="false"/>

        <TextView

            android:id="@+id/resend_detail"

            android:layout_height="wrap_content"
            android:layout_width="150dp"

            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_marginBottom="10dp"
            android:textColor="@color/for_helvicaR"
            android:fontFamily="helveticaRegular"

            android:layout_above="@+id/button_resend"


             />

        </RelativeLayout>


    <RelativeLayout
        android:id="@+id/tick_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/tick"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/tick_logo"
            android:layout_margin="4dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/desc1"
            />

    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tick_layout">
    <LinearLayout
        android:id="@+id/after_signin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_margin="8dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/fragmentencloselayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/border_color"
            android:animateLayoutChanges="true"
            android:onClick="checkmap"
            android:background="@drawable/autocomplete_border">
        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="autocomplete_places"
            android:fontFamily="Raleway Regular"

            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            tools:layout="@layout/place_autocomplete_fragment"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/detail"

                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_marginTop="12dp"

                android:textColor="@color/grey_300"

                tools:text="Firebase User ID: 123456789abc" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/fare"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/for_helvicaR"
            android:fontFamily="helveticaRegular"
            android:layout_marginBottom="160dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/req"
            android:textColor="@color/black"
            android:fontFamily="Roboto"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:gravity="center"

            android:background="@drawable/button_border"
            />
        </LinearLayout>

    </LinearLayout>
        </RelativeLayout>

    <LinearLayout
        android:id="@+id/after_request_accepted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="bottom"
        android:background="@drawable/background"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/rideDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="helveticaRegular"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:text="@string/ride"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/after_matchotp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_pilotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/pname"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pilotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/loading"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tV_bikeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/bikenumber"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/bikeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="RalewayRegular"
                android:text="@string/loading"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tV_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/faree"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/otpNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="RalewayRegular"
                android:text="@string/loading"
                android:textColor="@color/black"/>
        </LinearLayout>
          </LinearLayout>

    </RelativeLayout>

    </LinearLayout>
