<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginTop="0dp"
              android:layout_gravity="center"
              android:screenOrientation="portrait"
              android:background="@color/displaycolor"
              >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_pilotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/pname"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pilotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/loading"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tV_bikeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="ralewayRegular"
                android:text="@string/bikenumber"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/bikeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="RalewayRegular"
                android:text="@string/loading"
                android:textColor="@color/black"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/OTP"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:fontFamily="helveticaRegular"
        android:gravity="center"
        android:layout_below="@+id/top"
        android:layout_gravity="center"
        android:textColor="@color/for_helvicaR"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button_border"
        android:fontFamily="helveticaRegular"
        android:onClick="track"
        android:text="@string/track"
        android:textColor="@color/black" />
</RelativeLayout>